# paletten-cloud-hub

./: .dockerignore  .envrc  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
.github/workflows/: container.yml  general.yml
.sqlx/: query-9323f98aac9b81209ad8ef73021bf81992c0d4ac9b0820bbb152e05023d22790.json  query-ab46a49abfa68a7d63bb124634b2093503d5a68162b82f7cb3fdf7ed6df99c46.json  query-c191047c887b939c41d7224e2a799157bd1653850b5eee8f551d9dd0252051e3.json  query-ccac292a78891c950626dcdb52c38bcef17149079da7b55fdc9a2755ff123b50.json
migrations/: 20231222215110_create_history_tables.down.sql  20231222215110_create_history_tables.up.sql
src/: controller.rs  db.rs  main.rs  models.rs  telemetry.rs
