[package]
name = "paletten-cloud-hub"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Fleckenstein <oliverfl@live.dk>"]

[dependencies]
anyhow = "1.0.76"
async-trait = "0.1.75"
bytes = "1.5.0"
chrono = "0.4.31"
derive-getters = "0.3.0"
lazy_static = "1.4.0"
regex = "1.10.2"
rumqttc = "0.23.0"
serde = "1.0.193"
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "migrate",
  "chrono",
] }
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.35.1", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "signal",
] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = "0.3.18"

[dev-dependencies]
fake = { version = "2.9.2", features = ["derive"] }
mockall = "0.12.1"
